--- a/backend/kittygram_backend/settings.py.save.1
+++ b/backend/kittygram_backend/settings.py.save.1
@@ -1,14 +1,14 @@
 import os
 from pathlib import Path
 
-from dotenv import load_dotenv
+
 
 BASE_DIR = Path(__file__).resolve().parent.parent
 
 load_dotenv()
 
 SECRET_KEY = os.getenv('SECRET_KEY')
-DEBUG = os.getenv('DEBUG').lower() == 'true'
+DEBUG = True if os.getenv('DEBUG').lower() == 'true' else False
 
 ALLOWED_HOSTS = os.getenv('ALLOWED_HOSTS').split(',')
 
